# orbital-bullseye

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
cmake/: Dependencies.cmake
core/: bullseye_frame.cpp  bullseye_frame.hpp  bullseye_frame_math.cpp  bullseye_frame_math.hpp  bullseye_frame_provider.hpp  bullseye_frame_validator.cpp  bullseye_frame_validator.hpp  chief_state_provider.hpp  constants.hpp  contracts.hpp  dummy_predictor.cpp  dummy_predictor.hpp  frame_provider_cartesian.cpp  frame_provider_cartesian.hpp  frame_transforms.cpp  frame_transforms.hpp  log_names.hpp  logging.cpp  logging.hpp  prediction_buffer.hpp  provider_cartesian.cpp  provider_cartesian.hpp  provider_twobody.cpp  provider_twobody.hpp  publisher.cpp  publisher.hpp  relative_predictor.cpp  relative_predictor.hpp  time_grid.cpp  time_grid.hpp  types.hpp  vehicle_index_map.cpp  vehicle_index_map.hpp
core/math/: stumpff.hpp
docs/: architecture.md  coding_style.md  contracts.md  determinism.md  implementation.md  performance_budget.md  requirements.md  sprint_plan.md
models/: model_hcw.cpp  model_hcw.hpp  model_ya_stm.cpp  model_ya_stm.hpp  relative_model.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_bullseye_frame.cpp  test_bullseye_math.cpp  test_contracts_smoke.cpp  test_dummy_predictor.cpp  test_frame_providers.cpp  test_frame_validator.cpp  test_hcw_model.cpp  test_logging_smoke.cpp  test_models_link_smoke.cpp  test_prediction_buffer.cpp  test_providers.cpp  test_publisher.cpp  test_relative_predictor_injection.cpp  test_time_grid.cpp  test_transforms.cpp  test_vehicle_index_map.cpp  test_ya_model.cpp
